--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         }
     }
     dependencies {
+        // Add the dependency for the Performance Monitoring plugin
+        classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.3.2'
         classpath 'io.fabric.tools:gradle:1.29.0'  // Crashlytics plugin
