--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,8 @@ android {
     defaultConfig {
         applicationId "com.weichengcao.privadroid"
         minSdkVersion 23
-        targetSdkVersion 29
+        // TODO: Android API 26 and above does not support registering system broadcasts in Manifest
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -28,7 +29,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-ads:18.2.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    implementation 'com.google.firebase:firebase-firestore:21.1.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
