--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,14 @@
             android:name=".ui.SurveyQuestions.AppUninstallSurveyActivity"
             android:screenOrientation="portrait"
             tools:ignore="InnerclassSeparator" />
+        <activity
+            android:name=".ui.SurveyQuestions.PermissionDenySurveyActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="InnerclassSeparator" />
+        <activity
+            android:name=".ui.SurveyQuestions.PermissionGrantSurveyActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="InnerclassSeparator" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
