--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,25 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <receiver
+            android:name=".sensors.SystemChangeEventReceiver"
+            android:enabled="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <data
+                    android:path="com.weichengcao.privadroid"
+                    android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
         <service
             android:name=".sensors.AccessibilityEventMonitorService"
             android:label="@string/appName"
@@ -87,11 +106,16 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibilityservice" />
         </service>
+        <service android:name=".sensors.SystemBroadcastForegroundService" />
     </application>
 
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
+    <!--  To receive ACTION_BOOT_COMPLETED intent.  -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <!--  To run services in foreground in api 28 and above.  -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
