--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
             android:name=".ui.SurveyQuestions.PermissionGrantSurveyActivity"
             android:screenOrientation="portrait"
             tools:ignore="InnerclassSeparator" />
+        <activity
+            android:name=".ui.RewardsActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
