--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity
             android:name=".ui.RewardsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.ExitSurveyActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
@@ -111,7 +114,9 @@
         </service>
         <service android:name=".sensors.SystemBroadcastForegroundService" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
     <uses-permission
@@ -124,7 +129,7 @@
     <!--  To run services in foreground in api 28 and above.  -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
