--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,9 @@
         <service
             android:name=".notifications.ChangePermissionReminderService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".database.OnDeviceStorageProvider"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
